# enigma-engines

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
data/: crops.csv  synthetic_product_info.csv
docs/: index.md  modules.md
docs/guides/: installation.md  quickstart.md
enigma_engines/: agent.py  core_classes.py  plotting_utils.py  simulation.py
enigma_engines/animal_crossing/: README.md  agent.py  core_classes.py  data_simulation.py  plotting_utils.py  simulation.py
enigma_engines/animal_crossing/core/: agent.py  data_simulation.py  environment.py  load_data.py  villager.py
enigma_engines/infrastructure/: opensearch_setup.py
enigma_engines/practice_problem/: demo.ipynb  job_recommendation_linkedin.py
enigma_engines/product_recommendation/: synthetic_data.py
enigma_engines/village_simulation/: simulation.py
enigma_engines/village_simulation/agents/: __init__.py  action_plan.py  action_plan_example.py  villager.py
enigma_engines/village_simulation/environment/: __init__.py  army.py  field.py  forest.py  river.py  tannery.py  vendor.py  weather.py
enigma_engines/village_simulation/resources/: clothing.py  food.py  item.py  raw_material.py
enigma_engines/village_simulation/simulation_engine/: simulation.py  village_manager.py
enigma_engines/village_simulation/utilities/: display_reports.py  id_generator.py  logger.py
tests/infrastructure/: test_opensearch_setup.py
