[project]
name = "enigma-engines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "fake-useragent>=2.1.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.0",
    "seaborn>=0.13.2",
]

[tool.setuptools]
# No package-dir needed for flat layout if packages are in root
packages = ["enigma_engines"]
